--- a/src/BcBundle/Resources/views/Usuario/login.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/login.html.twig
@@ -33,7 +33,12 @@
             <div class="col-md-3">
             </div>
             <div class="col-md-5">
+                <br>
                 <h2> Registro de usuario </h2>
+                <br>
+                {% for message in app.session.flashbag().get('status') %}
+                    <div class="alert alert-success">{{ message }}</div>
+                {% endfor %}
                 {{form_start(form, {'action':'', 'method':'POST'})}}
                 {{(form_end(form))}}
             </div>
@@ -41,7 +46,6 @@
         <br>
     </div>
     {% endif %}
-
     <br>
     <div class="clearfix"></div>
 {% endblock %}
