--- a/src/BcBundle/Resources/views/Autor/addAutor.html.twig
+++ b/src/BcBundle/Resources/views/Autor/addAutor.html.twig
@@ -3,14 +3,13 @@
     <br>
     {% if app.user != null %}
         {% if app.user.rol == 'ADMIN' %}
-            <br>
             <div class="container bg-warning">
                 <div class="row">
                     <div class="col-md-3">
                     </div>
                     <div class="col-md-5">
                         <br>
-                        <h2>Añadir libro</h2>
+                        <h2>Añadir Autor</h2>
                         <br>
                         {{form_start(form)}}
                         {{form_end(form)}}
@@ -18,7 +17,6 @@
                     </div>
                 </div>
             </div>
-            <br>
         {% else %}
             <div class="container bg-danger">
                 <div class="row">
