--- a/src/BcBundle/Resources/views/Libro/addLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/addLibro.html.twig
@@ -11,7 +11,7 @@
                     <br>
                     <h2>Añadir libro</h2>
                     <br>
-                    {{form_start(form)}}
+                    {{form_start(form, {'enctype':'multipart/form-data'})}}
                     {{form_end(form)}}
                     <br>
                 </div>
