--- a/src/BcBundle/Resources/views/layout.html.twig
+++ b/src/BcBundle/Resources/views/layout.html.twig
@@ -7,18 +7,20 @@
         </title>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-        <script src="jquery-3.3.1.min.js"></script>
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     </head>
     <body>
-        <header class="bg-success">
+        <header class="bg-primary">
             <div class="container text-center">
                 <h2>BOOK CREW</h2>
             </div>
             <nav class="navbar navbar-dark bg-primary">
                 {% if app.user != null %}
                     <a class="navbar-brand" href="{{path("login")}}"><i class="fas fa-home"></i> Inicio</a>
-                    <a class="navbar-brand btn-right" href="#">
+                    <a id="titleDespUser" class="navbar-brand btn-left" href="#">
                         {% if app.user.rol != "ADMIN" %}
                             <i class="fas fa-user"></i>
                         {% else %}
@@ -33,6 +35,22 @@
                 {% endif %}
             </nav>
         </header>
+        {% if app.user != null %}
+            <div id="menuDespUser" class="container ">
+                <div class="row">
+                    <div class="col-md-5">
+                    </div>
+                    <div class="col-md-2 bg-warning text-center">
+                        <a class="navbar-brand btn-left" href=""><i class="fas fa-cog"></i> Perfil</a>
+                        <br><a class="navbar-brand btn-left" href=""><i class="fas fa-cog"></i> Mis libros</a>
+                        
+                    </div>
+                    <div class="col-4">
+                    </div>
+                </div>
+
+            </div>
+        {% endif %}
         <section id="content">
             {% block content %} 
                 Contenido por defecto
@@ -48,3 +66,12 @@
         </footer>
     </body>
 </html>
+{% block javascript %}
+    <script>
+        $(document).ready(function () {
+            $("#titleDespUser").click(function () {
+                $("#menuDespUser").toggle(1000, "swing");
+            });
+        });
+    </script>
+{% endblock %}
