--- a/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
+++ b/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
@@ -5,9 +5,9 @@
         <br>
         <div class="row">
             {% if app.user.rol == 'ADMIN' %}
-            <div class="col-md-6">
-                <a href=""><input type="button" value="Inscribir librería" class="btn btn-warning"></a>
-            </div>
+                <div class="col-md-6">
+                    <a href="{{path("bc_add_libreria")}}"><input type="button" value="Inscribir librería" class="btn btn-warning"></a>
+                </div>
             {% endif %}
             <div class="col-md-6">
                 <a href=""><input type="button" value="Buscar" class="btn btn-warning"></a>
@@ -16,58 +16,91 @@
         <br>
     </div>
     <br>
-    {% for libreria in librerias %}
-        <div id="tupla_libreria" class="container bg-warning">
-            <br>
+    {% if app.user != null %} 
+        {% if app.user.rol != null %}
+            {% for libreria in librerias %}
+                <div id="tupla_libreria" class="container bg-warning">
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h2><i class="fas fa-arrow-alt-circle-right"></i>{{libreria.nombre}}</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <h2>
+                                {% if app.user.rol == 'ADMIN' %} 
+                                    <br><br>
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <a href="{{path("bc_edit_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-pencil-alt" style="font-size: 250"></i></a>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <a href="{{path("bc_delete_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-trash" style="font-size: 250"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endif %} 
+                            </h2>
+                        </div>    
+                        <div class="col-md-9">
+                            <table style="width: 75%">
+                                <h6><b></b>
+                                    <tr>
+                                        <td><b>Nif : </b>{{libreria.nif}}</td>
+                                        <td><b></b></td>
+                                    </tr>
+                                    <tr>
+                                        <td><b>Tlf : </b>{{libreria.tlf}}</td>
+                                        <td><b>Email : </b>{{libreria.email}}</td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <b>Direccion :</b> {{libreria.direccion}};<br> {{libreria.poblacion}}/{{libreria.provincia}}
+                                        </td>
+                                        <td>
+                                            {% if libreria.ubicacion == "" or libreria.ubicacion == null %}
+                                                <b> Web : </b> <a href="{{ libreria.web }}"><i class="fas fa-link"></i> {{libreria.nombre}}</a>
+                                            {% else %}
+                                                <b> Ubicación :</b>  <a href="{{libreria.ubicacion}}"><i class="far fa-map"></i> Ubicación</a><br>
+                                                <b> Web : </b> <a href="{{ libreria.web }}"><i class="fas fa-link"></i> {{libreria.nombre}} </a>
+                                            {% endif %}
+                                        </td>
+                                    </tr>
+                                </h6>
+                            </table>
+                            <br>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+                <br>
+            {% endfor %}
+        {% else %}
+            <div class="container bg-danger">
+                <div class="row">
+                    <div class="col-md-3">
+                    </div>
+                    <div class="col-md-5" align="center">
+                        <br><br>
+                        <h1>¡Alto ahí, no tienes los permisos necesarios para acceder a esta sección!</h1>
+                        <br><br>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+    {% else %}
+        <div class="container bg-danger">
             <div class="row">
                 <div class="col-md-3">
-                     <h2> 
-                        <i class="fas fa-arrow-alt-circle-right"></i> {{libreria.nombre}}
-                        {% if app.user.rol == 'ADMIN' %} 
-                            <br><br>
-                            <div class="container"><div class="row">
-                                <div class="col-md-6">
-                                    <a href=""><i class="fas fa-pencil-alt" style="font-size: 250"></i></a>
-                                </div>
-                                <div class="col-md-6">
-                                    <a href="{{path("bc_delete_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-trash" style="font-size: 250"></i></a>
-                                </div>
-                                </div></div>
-                        {% endif %} 
-                     </h2>
-                </div>    
-                <div class="col-md-9">
-                    <br>
-                    <table style="width: 75%">
-                        <h6><b></b>
-                        <tr>
-                            <td><b>Nif : </b>{{libreria.nif}}</td>
-                            <td><b></b></td>
-                        </tr>
-                         <tr>
-                            <td><b>Tlf : </b>{{libreria.tlf}}</td>
-                            <td><b>Email : </b>{{libreria.email}}</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <b>Direccion :</b> {{libreria.direccion}};<br> {{libreria.poblacion}}/{{libreria.provincia}}
-                            </td>
-                            <td>
-                                {% if libreria.ubicacion == "" or libreria.ubicacion == null %}
-                                    <b> Web : </b> <a href="{{ libreria.web }}"><i class="fas fa-link"></i> {{libreria.nombre}}</a>
-                                {% else %}
-                                    <b> Ubicación :</b>  <a href="{{libreria.ubicacion}}"><i class="far fa-map"></i> Ubicación</a><br>
-                                    <b> Web : </b> <a href="{{ libreria.web }}"><i class="fas fa-link"></i> {{libreria.nombre}} </a>
-                                {% endif %}
-                            </td>
-                        </tr>
-                        </h6>
-                    </table>
-                    <br>
-                    <br>
+                </div>
+                <div class="col-md-5" align="center">
+                    <br><br>
+                    <h1>¡Alto ahí, forastero! ¡Debes inscribirte primero para entrar a esta sección!</h1>
+                    <br><br>
                 </div>
             </div>
         </div>
-        <br>
-    {% endfor %}
+    {% endif %}
 {% endblock %}
