--- a/src/BcBundle/Resources/views/Usuario/login.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/login.html.twig
@@ -1,82 +1,105 @@
 {% extends "BcBundle::layout.html.twig" %}
 {% block content %}
     {% if app.user == null %}
-    <!--LOGIN-->
-    <br>
-    <div class="container bg-warning">
-        <div class="row">
-            <div class="col-md-3">
-            </div>
-            <div class="col-md-5">
-                <br>
-                <h2> Identificación </h2>
-                <form action="{{path("login_check")}}" method="post">
-                    <br>
-                    <label><b>Email del usuario</b></label>
-                    <input type="name" id="email" name="_username" value="{{ last_username }}" class="form-control"/>
-                    <br>
-                    <label><b>Contraseña</b></label>
-                    <input type="password" id="password" name="_password" class="form-control"/>
-                    <br>
-                    <input type="submit" value="Entrar" class="btn btn-success">
-                    <input type="button" value="Cancelar" class="btn btn-danger">
-                    <input type="hidden" name="_target_path" value="/login"/>
-                </form>
-            </div>
-        </div>
+        <!--LOGIN-->
         <br>
-    </div>
-    <!-- CREACION DE USUARIO -->
-    <br>        
-    <div  class="container bg-warning">
-        <div class="row">
-            <div class="col-md-3">
+        <div class="container bg-warning">
+            <div class="row">
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-5">
+                    <br>
+                    <h2 id="titleSesion"> Identificación </h2>
+                    <span id="logSesion">
+                        <form action="{{path("login_check")}}" method="post">
+                            <br>
+                            <label><b>Email del usuario</b></label>
+                            <input type="name" id="email" name="_username" value="{{ last_username }}" class="form-control"/>
+                            <br>
+                            <label><b>Contraseña</b></label>
+                            <input type="password" id="password" name="_password" class="form-control"/>
+                            <br>
+                            <input type="submit" value="Entrar" class="btn btn-success">
+                            <input type="button" value="Cancelar" class="btn btn-danger">
+                            <input type="hidden" name="_target_path" value="/login"/>
+                        </form>
+                    </span>
+                </div>
             </div>
-            <div class="col-md-5">
-                <br>
-                <h2> Registro de usuario </h2>
-                <br>
-                {% for message in app.session.flashbag().get('status') %}
-                    <div class="alert alert-success">{{ message }}</div>
-                {% endfor %}
-                {{form_start(form, {'action':'', 'method':'POST'})}}
-                {{(form_end(form))}}
-            </div>
+            <br>
         </div>
-        <br>
-    </div>
+        <!-- CREACION DE USUARIO -->
+        <br>        
+        <div  class="container bg-warning">
+            <div class="row">
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-5">
+                    <br>
+                    <h2 id="reg">Registro de usuario </h2>
+                    <br>
+                    <span id="add">
+                        {% for message in app.session.flashbag().get('status') %}
+                            <div class="alert alert-success">{{ message }}</div>
+                        {% endfor %}
+                        {{form_start(form, {'action':'', 'method':'POST'})}}
+                        {{(form_end(form))}}
+                    </span>
+                </div>
+            </div>
+            <br>
+        </div>
     {% else %}
-    <br>        
-    <div  class="container bg-warning">
-        <div class="row"> 
-            <div class="col-md-5">
-                <br>
-                <h2> Menú </h2>
-                <br>
+        <br>        
+        <div  class="container bg-warning">
+            <div class="row"> 
+                <div class="col-md-12 text-center">
+                    <br>
+                    <h2 id="menu_princ"> Menú </h2>
+                    <br>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3" align="center">
-                <a href="{{path("bc_index_libro")}}"><input type="button" value="Listado de libros" class="btn btn-info"></a><br><br><br><br>
-            </div>
-            <div class="col-md-3" align="center">   
-                <a href="{{path("bc_index_libreria")}}"><input type="button" value="Listado de Librerías" class="btn btn-info"></a><br><br> 
-                <!--<a href=""><input type="button" value="Mi perfil" class="btn btn-dark"></a>-->
-            </div>
-            <div class="col-md-3" align="center">  
-                <a href="{{path("bc_index_autor")}}"><input type="button" value="Listado de Autores" class="btn btn-info"></a><br><br>
-            </div>
-            {% if app.user.rol == 'ADMIN' %}
-            <div class="col-md-3" align="center">  
-                <a href=""><input type="button" value="Listado de Usuarios" class="btn btn-info"></a><br><br>
-            </div>
-            {% endif %}
+            <span id="menuContentprinc">
+                <div class="row">
+                    <div class="col-md-3" align="center">
+                        <a href="{{path("bc_index_libro")}}"><input type="button" value="Listado de libros" class="btn btn-info"></a><br><br><br><br>
+                    </div>
+                    <div class="col-md-3" align="center">   
+                        <a href="{{path("bc_index_libreria")}}"><input type="button" value="Listado de Librerías" class="btn btn-info"></a><br><br> 
+                        <!--<a href=""><input type="button" value="Mi perfil" class="btn btn-dark"></a>-->
+                    </div>
+                    <div class="col-md-3" align="center">  
+                        <a href="{{path("bc_index_autor")}}"><input type="button" value="Listado de Autores" class="btn btn-info"></a><br><br>
+                    </div>
+                    {% if app.user.rol == 'ADMIN' %}
+                        <div class="col-md-3" align="center">  
+                            <a href=""><input type="button" value="Listado de Usuarios" class="btn btn-danger"></a><br><br>
+                        </div>
+                    {% endif %}
+                </div>
+            </span>
+            <br>
         </div>
         <br>
-    </div>
-    <br>
     {% endif %}
-<br>
-<div class="clearfix"></div>
+    <br>
+    <div class="clearfix"></div>
+    {% block javascript %}
+        <script>
+            $(document).ready(function () {
+                $("#logSesion").toggle(1000);
+                $("#add").toggle(1000, "swing");
+
+                $("#reg").click(function () {
+                    $("#add").toggle(1000, "swing");
+                });
+                $("#titleSesion").click(function () {
+                    $("#logSesion").toggle(1000);
+                });
+                $("#menu_princ").click(function () {
+                    $("#menuContentprinc").toggle(1000);
+                });
+            });
+        </script>
+    {% endblock %}
 {% endblock %}
-    
