Añadido vista de librerias por libro. Añadiendo vista libros por autor.

--- a/src/BcBundle/Resources/views/Libro/indexLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/indexLibro.html.twig
@@ -84,10 +84,7 @@
                                 <b>Disponible en : </b>
                                 <div id="list_tiendas">
                                     <ul>
-                                        <li>Tienda1</li>
-                                        <li>Tienda2</li>
-                                        <li>Tienda3</li>
-                                        <li><a href=""><i class="fas fa-eye"></i><b> Ver mas librerías..</b></a></li>
+                                        <li><a href="{{path("bc_index_stocks",{"id":libro.idLibro})}}"><i class="fas fa-eye"></i><b> Ver librerías..</b></a></li>
                                     </ul>
                                 </div>
                             </div>
