--- a/src/BcBundle/Resources/views/layout.html.twig
+++ b/src/BcBundle/Resources/views/layout.html.twig
@@ -5,12 +5,20 @@
         <title>
             {% block title %} BOOK CREW {% endblock %}
         </title>
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+        <!--<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>-->
         <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+        {% block stylesheet %}
+            <link href="{{asset('assets/bootstrap/css/bootstrap.min.css')}}" type="text/css" rel="stylesheet" />
+            <link href="{{asset('assets/css/bootstrap.cosmo.min.css')}}" type="text/css" rel="stylesheet" />
+            <link href="{{asset('assets/css/styles.css')}}" type="text/css" rel="stylesheet" />
+        {% endblock %}
+        {% block javascripts %}
+            <!--<script src="{{asset('assets/js/jquery-3.3.1.min.css')}}"></scripts>-->
+            <!--<script src="{{asset('assets/bootstrap/js/bootstrap.min.css')}}"></scripts>-->
+        {% endblock %}
     </head>
     <body>
         <header class="bg-primary">
@@ -20,14 +28,14 @@
             <nav class="navbar navbar-dark bg-primary">
                 {% if app.user != null %}
                     <a class="navbar-brand" href="{{path("login")}}"><i class="fas fa-home"></i> Inicio</a>
-                    <a id="titleDespUser" class="navbar-brand btn-left" href="#">
+                    <h4 id="titleDespUser">
                         {% if app.user.rol != "ADMIN" %}
                             <i class="fas fa-user"></i>
                         {% else %}
                             <i class="fas fa-chess-king"></i>
                         {% endif %}
                         {{(app.user.nick)}}
-                    </a>
+                    </h4>
                     <a class="navbar-brand btn-left" href="{{path("logout")}}"><i class="fas fa-cog"></i> Cerrar sesion</a>
                 {% else %}
                     <a class="navbar-brand" href="{{path("bc_homepage")}}"><i class="fas fa-home"></i> Inicio</a>
@@ -40,15 +48,14 @@
                 <div class="row">
                     <div class="col-md-5">
                     </div>
-                    <div class="col-md-2 bg-warning text-center">
+                    <div class="col-md-2 bg-dark text-center">
                         <a class="navbar-brand btn-left" href=""><i class="fas fa-cog"></i> Perfil</a>
-                        <br><a class="navbar-brand btn-left" href=""><i class="fas fa-cog"></i> Mis libros</a>
-                        
+                        <br>
+                        <a class="navbar-brand btn-left" href="{{path("bc_index_listadolibros",{"id":app.user.idUsuario})}}"><i class="fas fa-cog"></i> Mis libros </a>
                     </div>
                     <div class="col-4">
                     </div>
                 </div>
-
             </div>
         {% endif %}
         <section id="content">
@@ -69,6 +76,7 @@
 {% block javascript %}
     <script>
         $(document).ready(function () {
+            $("#titleDespUser").hide();
             $("#titleDespUser").click(function () {
                 $("#menuDespUser").toggle(1000, "swing");
             });
